<resources>
    <string name="activate">Activate</string>
    <string name="activate_fail_notification_title">Reactivate sync</string>
    <string name="activating">Activating…</string>
    <string name="deprecated_alarm_message_12_hour_formate" />
    <string name="alwaysUsePrompt">Remember this choice</string>
    <string name="android_byteShort">@*android:string/byteShort</string>
    <string name="android_capital_off">@*android:string/capital_off</string>
    <string name="android_capital_on">@*android:string/capital_on</string>
    <string name="android_common_last_name_prefixes">@*android:string/common_last_name_prefixes</string>
    <string name="android_common_name_conjunctions">@*android:string/common_name_conjunctions</string>
    <string name="android_common_name_prefixes">@*android:string/common_name_prefixes</string>
    <string name="android_common_name_suffixes">@*android:string/common_name_suffixes</string>
    <string name="android_default_audio_route_name_headphones">@*android:string/default_audio_route_name_headphones</string>
    <string name="android_factorytest_reboot">@*android:string/factorytest_reboot</string>
    <string name="android_fast_scroll_alphabet">@*android:string/fast_scroll_alphabet</string>
    <string name="android_fileSizeSuffix">@*android:string/fileSizeSuffix</string>
    <string name="android_gigabyteShort">@*android:string/gigabyteShort</string>
    <string name="android_global_action_power_off">@*android:string/global_action_power_off</string>
    <string name="android_global_actions_airplane_mode_off_status">@*android:string/global_actions_airplane_mode_off_status</string>
    <string name="android_global_actions_airplane_mode_on_status">@*android:string/global_actions_airplane_mode_on_status</string>
    <string name="android_global_actions_toggle_airplane_mode">@*android:string/global_actions_toggle_airplane_mode</string>
    <string name="android_kilobyteShort">@*android:string/kilobyteShort</string>
    <string name="android_lockscreen_access_pattern_cell_added">@*android:string/lockscreen_access_pattern_cell_added</string>
    <string name="android_lockscreen_access_pattern_cleared">@*android:string/lockscreen_access_pattern_cleared</string>
    <string name="android_lockscreen_access_pattern_detected">@*android:string/lockscreen_access_pattern_detected</string>
    <string name="android_lockscreen_access_pattern_start">@*android:string/lockscreen_access_pattern_start</string>
    <string name="android_lockscreen_emergency_call">@*android:string/lockscreen_emergency_call</string>
    <string name="android_lockscreen_glogin_checking_password">@*android:string/lockscreen_glogin_checking_password</string>
    <string name="android_lockscreen_glogin_forgot_pattern">@*android:string/lockscreen_glogin_forgot_pattern</string>
    <string name="android_lockscreen_glogin_instructions">To unlock, sign in to your Xiaomi Account.</string>
    <string name="android_lockscreen_glogin_invalid_input">@*android:string/lockscreen_glogin_invalid_input</string>
    <string name="android_lockscreen_glogin_password_hint">@*android:string/lockscreen_glogin_password_hint</string>
    <string name="android_lockscreen_glogin_submit_button">@*android:string/lockscreen_glogin_submit_button</string>
    <string name="android_lockscreen_glogin_too_many_attempts">@*android:string/lockscreen_glogin_too_many_attempts</string>
    <string name="android_lockscreen_missing_sim_message_short">@*android:string/lockscreen_missing_sim_message_short</string>
    <string name="android_megabyteShort">@*android:string/megabyteShort</string>
    <string name="android_petabyteShort">@*android:string/petabyteShort</string>
    <string name="android_phoneTypeMms">@*android:string/phoneTypeMms</string>
    <string name="android_power_off">@*android:string/power_off</string>
    <string name="android_report">@*android:string/report</string>
    <string name="android_ringtone_default_with_actual">@*android:string/ringtone_default_with_actual</string>
    <string name="android_ringtone_silent">@*android:string/global_action_toggle_silent_mode</string>
    <string name="android_ringtone_unknown">@*android:string/ringtone_unknown</string>
    <string name="android_shutdown_confirm">@*android:string/shutdown_confirm</string>
    <string name="android_shutdown_progress">@*android:string/shutdown_progress</string>
    <string name="android_silent_mode_ring">@*android:string/silent_mode_ring</string>
    <string name="android_silent_mode_silent">@*android:string/silent_mode_silent</string>
    <string name="android_silent_mode_vibrate">@*android:string/silent_mode_vibrate</string>
    <string name="android_ssl_certificate">@*android:string/ssl_certificate</string>
    <string name="android_storage_usb">@*android:string/storage_usb</string>
    <string name="android_terabyteShort">@*android:string/terabyteShort</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="android_usb_cd_installer_notification_title">@*android:string/usb_cd_installer_notification_title</string>
    <string name="android_usb_mtp_notification_title">@*android:string/usb_mtp_notification_title</string>
    <string name="android_usb_ptp_notification_title">@*android:string/usb_ptp_notification_title</string>
    <string name="android_wifi_tether_configure_ssid_default">@*android:string/wifi_tether_configure_ssid_default</string>
    <string name="yesterday">Yesterday</string>
    <string name="arbor_day">植树节</string>
    <string name="autumn_begins">立秋</string>
    <string name="autumn_equinox">秋分</string>
    <string name="callNoAnswerTimeFormat">Ring %s times</string>
    <string name="call_record_or">or</string>
    <string name="call_record_sample_prefix_miui">Call</string>
    <string name="caller_info_name_delimiter">Or</string>
    <string name="check_phone_error_title">"Sync hasn't been activated"</string>
    <string name="check_phone_io_error">Network error</string>
    <string name="childrens_day">儿童节</string>
    <string name="chinese_youth_day">青年节</string>
    <string name="christmas_day">圣诞节</string>
    <string name="clear_and_bright">清明</string>
    <string name="cold_dews">寒露</string>
    <string name="country_name_ac">AC</string>
    <string name="country_name_ad">AD</string>
    <string name="country_name_ae">AE</string>
    <string name="country_name_af">AF</string>
    <string name="country_name_ag">AG</string>
    <string name="country_name_ai">AI</string>
    <string name="country_name_al">AL</string>
    <string name="country_name_am">AM</string>
    <string name="country_name_an">AN</string>
    <string name="country_name_ao">AO</string>
    <string name="country_name_ar">AR</string>
    <string name="country_name_as">AS</string>
    <string name="country_name_at">AT</string>
    <string name="country_name_au">AU</string>
    <string name="country_name_aw">AW</string>
    <string name="country_name_az">AZ</string>
    <string name="country_name_ba">BA</string>
    <string name="country_name_bb">BB</string>
    <string name="country_name_bd">BD</string>
    <string name="country_name_be">BE</string>
    <string name="country_name_bf">BF</string>
    <string name="country_name_bg">BG</string>
    <string name="country_name_bh">BH</string>
    <string name="country_name_bi">BI</string>
    <string name="country_name_bj">BJ</string>
    <string name="country_name_bm">BM</string>
    <string name="country_name_bn">BN</string>
    <string name="country_name_bo">BO</string>
    <string name="country_name_br">BR</string>
    <string name="country_name_bs">BS</string>
    <string name="country_name_bt">BT</string>
    <string name="country_name_bw">BW</string>
    <string name="country_name_by">BY</string>
    <string name="country_name_bz">BZ</string>
    <string name="country_name_cd">CD</string>
    <string name="country_name_cf">CF</string>
    <string name="country_name_cg">CG</string>
    <string name="country_name_ch">CH</string>
    <string name="country_name_ci">CI</string>
    <string name="country_name_ck">CK</string>
    <string name="country_name_cl">CL</string>
    <string name="country_name_cm">CM</string>
    <string name="country_name_cn">CN</string>
    <string name="country_name_co">CO</string>
    <string name="country_name_cr">CR</string>
    <string name="country_name_cu">CU</string>
    <string name="country_name_cv">CV</string>
    <string name="country_name_cy">CY</string>
    <string name="country_name_cz">CZ</string>
    <string name="country_name_de">DE</string>
    <string name="country_name_dj">DJ</string>
    <string name="country_name_dk">DK</string>
    <string name="country_name_dm">DM</string>
    <string name="country_name_do">DO</string>
    <string name="country_name_dz">DZ</string>
    <string name="country_name_ec">EC</string>
    <string name="country_name_ee">EE</string>
    <string name="country_name_eg">EG</string>
    <string name="country_name_er">ER</string>
    <string name="country_name_es">ES</string>
    <string name="country_name_et">ET</string>
    <string name="country_name_fi">FI</string>
    <string name="country_name_fj">FJ</string>
    <string name="country_name_fk">FK</string>
    <string name="country_name_fm">FM</string>
    <string name="country_name_fo">FO</string>
    <string name="country_name_fr">FR</string>
    <string name="country_name_ga">GA</string>
    <string name="country_name_gd">GD</string>
    <string name="country_name_ge">GE</string>
    <string name="country_name_gf">GF</string>
    <string name="country_name_gg">GG</string>
    <string name="country_name_gh">GH</string>
    <string name="country_name_gi">GI</string>
    <string name="country_name_gl">GL</string>
    <string name="country_name_gm">GM</string>
    <string name="country_name_gn">GN</string>
    <string name="experimental_validate">Validate</string>
    <string name="experimental_validate_fail">Sign-in failed</string>
    <string name="experimental_validate_password">Password</string>
    <string name="experimental_validate_thanks">Thank you!</string>
    <string name="experimental_validate_username">Username</string>
    <string name="experimental_validate_warning">Thank you for helping to make MIUI better!</string>
    <string name="find_device_turn_off_flight_mode">Turn off airplane mode.</string>
    <string name="screen_on_proximity_sensor_hint">To disable this feature, press the Back and Volume up buttons simultaneously.</string>
    <string name="screen_on_proximity_sensor_summary">"Don't cover the top of the screen"</string>
    <string name="screen_on_proximity_sensor_title">Prevent pocket dials</string>
    <string name="android_searchview_description_search">@*android:string/searchview_description_search</string>
    <string name="android_searchview_description_query">@*android:string/searchview_description_query</string>
    <string name="android_searchview_description_clear">@*android:string/searchview_description_clear</string>
    <string name="android_searchview_description_submit">@*android:string/searchview_description_submit</string>
    <string name="android_searchview_description_voice">@*android:string/searchview_description_voice</string>
    <string name="v5_date_picker_label_day" />
    <string name="v5_date_picker_label_month" />
    <string name="v5_date_picker_label_year" />
    <string name="login_website_in_case_forget_password">To reset your password, go to i.xiaomi.com.</string>
    <string name="android_grant_permissions_header_text">@*android:string/grant_permissions_header_text</string>
    <string name="android_deny">@*android:string/deny</string>
    <string name="android_allow">@*android:string/allow</string>
    <string name="grant_permissions_apps">Access apps request</string>
    <string name="grant_permissions_account">Access account request</string>
    <string name="open_wifi_settings">Open network connection</string>
</resources>