<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="30.0dip"
            android:text="@string/experimental_validate_thanks"
            android:textAppearance="@style/V5.TextAppearance.Large"
            android:textColor="@color/information_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20.0dip"
            android:gravity="center"
            android:text="@string/experimental_validate_warning"
            android:textAppearance="@style/V5.TextAppearance.Medium" />

        <EditText
            android:id="@id/account_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/experimental_input_username_bg"
            android:hint="@string/experimental_validate_username"
            android:inputType="number" />

        <EditText
            android:id="@id/password_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/experimental_input_password_bg"
            android:hint="@string/experimental_validate_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@id/experimental_validate_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:text="@string/experimental_validate_fail"
            android:textAppearance="@style/V5.TextAppearance.Small"
            android:textColor="@color/information_warning"
            android:visibility="invisible" />

        <Button
            android:id="@id/experimental_validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:background="@drawable/v5_btn_bg_positive_warn_light"
            android:gravity="center"
            android:text="@string/experimental_validate" />
    </LinearLayout>

</ScrollView>