<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="50.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/grant_permission_title_color" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/grant_credentials_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/android_grant_permissions_header_text" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/grant_permission_summary_color" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/grant_permissions_apps" />
    <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="@integer/android_preference_fragment_scrollbarStyle" android:id="@*android:id/list" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="false" android:cacheColorHint="@*android:color/transparent" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/grant_permission_summary_color" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/grant_permissions_account" />
    <include android:id="@id/grant_credentials_account" layout="@layout/grant_credentials_item" />
    <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/grant_permission_title_color" android:id="@id/deny_button" android:background="@drawable/grant_credentials_button_left" android:layout_width="148.0dip" android:layout_height="wrap_content" android:text="@string/android_deny" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/grant_permission_title_color" android:id="@id/allow_button" android:background="@drawable/grant_credentials_button_right" android:layout_width="148.0dip" android:layout_height="wrap_content" android:text="@string/android_allow" />
    </LinearLayout>
</LinearLayout>