<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/android_pickers" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <miui.widget.NumberPicker android:id="@id/android_month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v5_date_picker_label_month" android:layout_weight="1.0" />
        <miui.widget.NumberPicker android:id="@id/android_day" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v5_date_picker_label_day" android:layout_weight="1.0" />
        <miui.widget.NumberPicker android:id="@id/android_year" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v5_date_picker_label_year" android:layout_weight="1.0" />
    </LinearLayout>
    <CalendarView android:id="@id/android_calendar_view" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="245.0dip" android:layout_height="280.0dip" android:layout_weight="1.0" android:layout_marginStart="44.0dip" />
</LinearLayout>