<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#4c000000"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0px"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-15.0dip"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@id/topHeader_account"
                style="@style/V5.Widget.TextView"
                android:layout_width="fill_parent"
                android:layout_height="64.0dip"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/android_ic_lock_idle_lock"
                android:drawablePadding="5.0dip"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium" />

            <ImageView
                android:id="@*android:id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/find_device_warning" />

            <TextView
                android:id="@id/instructions_account"
                style="@style/V5.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10.0dip"
                android:gravity="center"
                android:text="@string/android_lockscreen_glogin_instructions"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ccffffff"
                android:textSize="14.0sp" />

            <Spinner
                android:id="@id/login_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10.0dip"
                android:background="@drawable/miui_account_unlock_screen_spinner_bg"
                android:dropDownHeight="@dimen/v5_list_view_single_line_height"
                android:dropDownHorizontalOffset="0.0dip"
                android:dropDownVerticalOffset="0.0dip"
                android:dropDownWidth="fill_parent"
                android:popupBackground="@drawable/miui_account_unlock_screen_spinner_popup_bg" />

            <EditText
                android:id="@id/password_account"
                style="@style/V5.Widget.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/miui_password_unlock_screen_input_field_bg"
                android:hint="@string/android_lockscreen_glogin_password_hint"
                android:inputType="textPassword"
                android:paddingBottom="12.0dip"
                android:paddingLeft="12.0dip"
                android:paddingTop="12.0dip"
                android:textColor="#ffffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10.0dip"
                android:text="@string/login_website_in_case_forget_password"
                android:textColor="#ccffffff"
                android:textSize="14.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginRight="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginTop="10.0dip" >

                <Button
                    android:id="@id/cancel"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/miui_account_unlock_screen_cancel_btn"
                    android:gravity="center"
                    android:text="@*android:string/cancel"
                    android:textColor="#ffffffff" />

                <Button
                    android:id="@id/ok_account"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/miui_account_unlock_screen_login_btn"
                    android:gravity="center"
                    android:text="@string/android_lockscreen_glogin_submit_button"
                    android:textColor="#ffffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginRight="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginTop="@dimen/miui_account_unlock_screen_button_top_padding" >

                <Button
                    android:id="@id/open_wifi_settings"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/v5_btn_bg_light"
                    android:text="@string/open_wifi_settings"
                    android:textColor="#ffffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginRight="@dimen/miui_account_unlock_screen_button_horizontal_padding"
                android:layout_marginTop="@dimen/miui_account_unlock_screen_button_top_padding" >

                <Button
                    android:id="@id/airplane_mode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/v5_btn_bg_light"
                    android:text="@string/find_device_turn_off_flight_mode"
                    android:textColor="#ffffffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@id/android_emergencyCallButton"
        style="@style/V5.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/find_device_btn"
        android:drawableLeft="@drawable/android_ic_emergency"
        android:drawablePadding="4.0dip"
        android:text="@string/android_lockscreen_emergency_call"
        android:textColor="#ffffffff" />

</LinearLayout>