<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/android_search_bar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@id/android_search_badge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="2.0dip"
        android:drawablePadding="0.0dip"
        android:gravity="center_vertical"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:visibility="gone" />

    <ImageView
        android:id="@id/android_search_button"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/android_searchview_description_search" />

    <LinearLayout
        android:id="@id/android_search_edit_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="4.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_weight="1.0"
        android:background="?searchViewTextField"
        android:clipChildren="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/android_search_mag_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:visibility="gone" />

        <LinearLayout
            android:id="@id/android_search_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <view
                android:id="@id/android_search_src_text"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                class="android.widget.SearchView$SearchAutoComplete"
                android:background="@null"
                android:contentDescription="@string/android_searchview_description_query"
                android:dropDownAnchor="@id/android_search_edit_frame"
                android:dropDownHeight="wrap_content"
                android:dropDownHorizontalOffset="0.0dip"
                android:dropDownVerticalOffset="0.0dip"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete|textNoSuggestions"
                android:minWidth="@dimen/android_search_view_text_min_width"
                android:paddingEnd="@dimen/android_dropdownitem_text_padding_right"
                android:singleLine="true" />

            <ImageView
                android:id="@id/android_search_close_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:background="@*android:color/transparent"
                android:contentDescription="@string/android_searchview_description_clear"
                android:focusable="true"
                android:src="?searchViewCloseIcon" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/android_submit_area"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="?searchViewTextFieldRight"
            android:clipChildren="false"
            android:orientation="horizontal" >

            <ImageView
                android:id="@id/android_search_go_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:background="@*android:color/transparent"
                android:contentDescription="@string/android_searchview_description_submit"
                android:focusable="true"
                android:src="?searchViewGoIcon"
                android:visibility="gone" />

            <ImageView
                android:id="@id/android_search_voice_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:background="@*android:color/transparent"
                android:contentDescription="@string/android_searchview_description_voice"
                android:focusable="true"
                android:src="?searchViewVoiceIcon"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>